feat(api): expose optional device directory
